--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "twilio": "^5.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
